--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,9 @@
     "require": {
         "php": "8.2 - 8.5",
         "ext-filter": "*",
+        "firebase/php-jwt": "^7.0.2",
         "httpsoft/http-message": "^1.1.6",
+        "psr/clock": "^1.0",
         "psr/container": "^2.0.2",
         "psr/http-factory": "^1.1",
         "psr/http-message": "^2.0",
@@ -39,14 +41,19 @@
         "psr/http-server-middleware": "^1.0.2",
         "psr/log": "^3.0.2",
         "symfony/console": "^7.4.3",
-        "vlucas/phpdotenv": "^5.6",
+        "vlucas/phpdotenv": "^5.6.3",
         "yiisoft/aliases": "^3.1.1",
+        "yiisoft/cache": "^3.2",
+        "yiisoft/cache-file": "^3.2",
         "yiisoft/config": "^1.6.2",
         "yiisoft/data": "^1.0.1",
         "yiisoft/data-response": "^2.1.2",
+        "yiisoft/db": "^2.0",
+        "yiisoft/db-migration": "^2.0.1",
+        "yiisoft/db-pgsql": "^2.0",
         "yiisoft/definitions": "^3.4.1",
         "yiisoft/di": "^1.4.1",
-        "yiisoft/error-handler": "^4.3.1",
+        "yiisoft/error-handler": "^4.3.2",
         "yiisoft/http": "^1.3",
         "yiisoft/hydrator": "^1.6.3",
         "yiisoft/injector": "^1.2.1",
@@ -58,7 +65,10 @@
         "yiisoft/request-provider": "^1.2",
         "yiisoft/router": "^4.0.2",
         "yiisoft/router-fastroute": "^4.0.3",
-        "yiisoft/validator": "^2.5.1",
+        "yiisoft/security": "^1.2",
+        "yiisoft/translator": "^3.2.1",
+        "yiisoft/translator-message-php": "^1.1.2",
+        "yiisoft/validator": "^2.5",
         "yiisoft/yii-console": "^2.4.2",
         "yiisoft/yii-http": "^1.1.1",
         "yiisoft/yii-runner-console": "^2.2.1",
@@ -73,7 +83,7 @@
         "codeception/module-db": "^3.2.2",
         "codeception/module-phpbrowser": "^3.0.2",
         "codeception/module-rest": "^3.4.3",
-        "friendsofphp/php-cs-fixer": "^3.92.4",
+        "friendsofphp/php-cs-fixer": "^3.92.5",
         "phpunit/phpunit": "^11.5.46",
         "rector/rector": "^2.3.0",
         "roave/infection-static-analysis-plugin": "^1.43",
