--- a/composer.json
+++ b/composer.json
@@ -48,6 +48,7 @@
         "yiisoft/aliases": "^3.1.1",
         "yiisoft/cache": "^3.2",
         "yiisoft/cache-file": "^3.2",
+        "yiisoft/cache-redis": "^2.0",
         "yiisoft/config": "^1.6.2",
         "yiisoft/data": "^1.0.1",
         "yiisoft/data-response": "^2.1.2",
