generator & Seeder & Faker

--- a/composer.json
+++ b/composer.json
@@ -33,8 +33,8 @@
         "ext-filter": "*",
         "firebase/php-jwt": "^7.0.2",
         "httpsoft/http-message": "^1.1.6",
-        "mongodb/mongodb": "^2.1",
-        "nelmio/alice": "^3.16",
+        "mongodb/mongodb": "^2.1.2",
+        "nelmio/alice": "^3.16.1",
         "psr/clock": "^1.0",
         "psr/container": "^2.0.2",
         "psr/http-factory": "^1.1",
@@ -42,8 +42,8 @@
         "psr/http-server-handler": "^1.0.2",
         "psr/http-server-middleware": "^1.0.2",
         "psr/log": "^3.0.2",
-        "sentry/sentry": "^4.19",
-        "symfony/console": "^7.4.3",
+        "sentry/sentry": "^4.19.1",
+        "symfony/console": "^7.4.4",
         "vlucas/phpdotenv": "^5.6.3",
         "yiisoft/access": "2.0",
         "yiisoft/aliases": "^3.1.1",
@@ -67,13 +67,13 @@
         "yiisoft/log-target-file": "^3.1",
         "yiisoft/middleware-dispatcher": "^5.4",
         "yiisoft/request-body-parser": "^1.2.1",
-        "yiisoft/request-provider": "^1.2",
+        "yiisoft/request-provider": "^1.3",
         "yiisoft/router": "^4.0.2",
         "yiisoft/router-fastroute": "^4.0.3",
         "yiisoft/security": "^1.2",
         "yiisoft/translator": "^3.2.1",
         "yiisoft/translator-message-php": "^1.1.2",
-        "yiisoft/validator": "^2.5",
+        "yiisoft/validator": "^2.5.1",
         "yiisoft/yii-console": "^2.4.2",
         "yiisoft/yii-http": "^1.1.1",
         "yiisoft/yii-runner-console": "^2.2.1",
@@ -81,19 +81,19 @@
     },
     "require-dev": {
         "codeception/c3": "^2.9",
-        "codeception/codeception": "^5.3.3",
+        "codeception/codeception": "^5.3.4",
         "codeception/lib-innerbrowser": "^4.0.8",
         "codeception/module-asserts": "^3.3.0",
         "codeception/module-cli": "^2.0.1",
         "codeception/module-db": "^3.2.2",
         "codeception/module-phpbrowser": "^3.0.2",
         "codeception/module-rest": "^3.4.3",
-        "friendsofphp/php-cs-fixer": "^3.92",
+        "friendsofphp/php-cs-fixer": "^3.93.1",
         "phpunit/phpunit": "^11.5.50",
-        "rector/rector": "^2.3.0",
+        "rector/rector": "^2.3.5",
         "roave/infection-static-analysis-plugin": "^1.43",
         "shipmonk/composer-dependency-analyser": "^1.8.4",
-        "vimeo/psalm": "^6.14",
+        "vimeo/psalm": "^6.15",
         "yiisoft/log-target-syslog": "^2.1",
         "yiisoft/profiler": "^3.0"
     },
@@ -114,6 +114,7 @@
         "skeleton-copy-examples": [
             "@php scripts/skeleton-copy-examples.php"
         ],
+        "skeleton-generate-module": "php scripts/generate-module.php",
         "serve": [
             "Composer\\Config::disableProcessTimeout",
             "@php ./yii serve"
