lock version manage

--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,12 @@ app.cors.allowedHeaders=["Content-Type","Authorization","X-Requested-With","Acce
 app.cors.exposedHeaders=["X-Pagination-Total-Count","X-Pagination-Page-Count"]
 app.trusted_hosts.allowedHosts=["127.0.0.1","::1","localhost"]
 
+# Optimistic Lock Configuration
+app.optimistic_lock.enabled=true
+
+# Per-Validator Optimistic Lock Configuration
+app.optimistic_lock.example.enabled=true
+
 # SSO Configuration (External Keycloak)
 app.jwt.secret=secret-key-harus-panjang-256-bit
 app.jwt.algorithm=HS256
