lock version manage

--- a/.env.example
+++ b/.env.example
@@ -23,7 +23,7 @@ app.trusted_hosts.allowedHosts=["127.0.0.1","::1","localhost"]
 
 # Optimistic Lock Configuration
 app.optimistic_lock.enabled=true
-app.optimistic_lock.example.enabled=true
+app.optimistic_lock.disabled.values="example,flag"
 
 # SSO Configuration (External Keycloak)
 app.jwt.secret=secret-key-harus-panjang-256-bit
