Sync MDB & Lock Version VO

--- a/.env.example
+++ b/.env.example
@@ -5,20 +5,26 @@ APP_DEBUG=1
 app.config.code=appAPI
 app.config.name=appAPI
 app.config.language=en
+app.config.allow_god_mode=true
 app.time.timezone=Asia/Jakarta
+
 app.pagination.defaultPageSize=10
 app.pagination.maxPageSize=100
+
 app.rateLimit.maxRequests=100
 app.rateLimit.windowSize=60
+
 app.hsts.maxAge=31536000
 app.hsts.includeSubDomains=true
 app.hsts.preload=false
+
 app.cors.allowedOrigins=["http://example.com:3000"]
 app.cors.maxAge=86400
 app.cors.allowCredentials=true
 app.cors.allowedMethods=["GET","POST","PUT","PATCH","DELETE","OPTIONS"]
 app.cors.allowedHeaders=["Content-Type","Authorization","X-Requested-With","Accept","Origin"]
 app.cors.exposedHeaders=["X-Pagination-Total-Count","X-Pagination-Page-Count"]
+
 app.trusted_hosts.allowedHosts=["127.0.0.1","::1","localhost"]
 
 # Optimistic Lock Configuration
