--- a/.env.example
+++ b/.env.example
@@ -44,9 +44,12 @@ db.default.name=dev_yii3
 db.default.user=postgres
 db.default.password=postgres
 
+db.mongodb.enabled=true
 db.mongodb.dsn=localhost:27017
 db.mongodb.name=db_example
-db.mongodb.enabled=true
+db.mongodb.connectTimeoutMS=2000
+db.mongodb.socketTimeoutMS=1000
+db.mongodb.readPreference=nearest
 
 redis.default.host=127.0.0.1
 redis.default.port=6379
