--- a/src/Seeder/Fixtures/example.yaml
+++ b/src/Seeder/Fixtures/example.yaml
@@ -1,11 +1,11 @@
 # 1. VALUE OBJECTS (Tetap sama)
-App\Domain\Shared\ValueObject\Status:
+App\Domain\Shared\ValueObject\ResourceStatus:
   status_draft:
     __factory: 
-      'App\Domain\Shared\ValueObject\Status::from': [2]
+      'App\Domain\Shared\ValueObject\ResourceStatus::from': [2]
   status_active:
     __factory: 
-      'App\Domain\Shared\ValueObject\Status::from': [1]
+      'App\Domain\Shared\ValueObject\ResourceStatus::from': [1]
 
 App\Domain\Shared\ValueObject\DetailInfo:
   info_empty:
